--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="info">
-    <div id="status">Tilt your phone to move the player. Collect the 3 coins and go to the door!</div>
+    <div id="status">Tilt your phone to move the player. Collect the coins!</div>
     <button id="startBtn">Activate phone movement</button>
   </div>
 
